tests/rosetta/transpiler/CPP/2048.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp: In function ‘std::map<std::__cxx11::basic_string<char>, std::any> moveLeft(std::vector<std::vector<int> >, int)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:180:33: error: no match for ‘operator[]’ (operand types are ‘std::any’ and ‘int’)
  180 |             if ((b[y][x] != _new[x])) {
      |                                 ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:183:27: error: no match for ‘operator[]’ (operand types are ‘std::any’ and ‘int’)
  183 |             b[y][x] = _new[x];
      |                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp: In function ‘std::map<std::__cxx11::basic_string<char>, std::any> moveRight(std::vector<std::vector<int> >, int)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:197:35: error: no match for ‘operator=’ (operand types are ‘std::vector<int>’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  197 |         rev = r[std::string("row")];
      |                                   ^
In file included from /usr/include/c++/13/vector:72,
                 from /workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:4:
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘const std::vector<int>&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
In file included from /usr/include/c++/13/vector:66:
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = int; _Alloc = std::allocator<int>]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::vector<int>&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = int; _Alloc = std::allocator<int>]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::initializer_list<int>’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp: In function ‘std::map<std::__cxx11::basic_string<char>, std::any> moveUp(std::vector<std::vector<int> >, int)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:241:33: error: no match for ‘operator[]’ (operand types are ‘std::any’ and ‘int’)
  241 |             if ((b[y][x] != _new[y])) {
      |                                 ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:244:27: error: no match for ‘operator[]’ (operand types are ‘std::any’ and ‘int’)
  244 |             b[y][x] = _new[y];
      |                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp: In function ‘std::map<std::__cxx11::basic_string<char>, std::any> moveDown(std::vector<std::vector<int> >, int)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:258:35: error: no match for ‘operator=’ (operand types are ‘std::vector<int>’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  258 |         col = r[std::string("row")];
      |                                   ^
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘const std::vector<int>&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = int; _Alloc = std::allocator<int>]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::vector<int>&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = int; _Alloc = std::allocator<int>]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::initializer_list<int>’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp: In function ‘int main()’:
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:311:35: error: no match for ‘operator=’ (operand types are ‘std::vector<std::vector<int> >’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  311 |     board = r[std::string("board")];
      |                                   ^
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘const std::vector<std::vector<int> >&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::vector<std::vector<int> >&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::initializer_list<std::vector<int> >’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:313:35: error: no match for ‘operator=’ (operand types are ‘std::vector<std::vector<int> >’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  313 |     board = r[std::string("board")];
      |                                   ^
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘const std::vector<std::vector<int> >&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::vector<std::vector<int> >&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::initializer_list<std::vector<int> >’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:323:43: error: no match for ‘operator=’ (operand types are ‘std::vector<std::vector<int> >’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  323 |             board = m[std::string("board")];
      |                                           ^
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘const std::vector<std::vector<int> >&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::vector<std::vector<int> >&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::initializer_list<std::vector<int> >’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:324:43: error: cannot convert ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘int’ in assignment
  324 |             score = m[std::string("score")];
      |                                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:325:43: error: cannot convert ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘bool’ in assignment
  325 |             moved = m[std::string("moved")];
      |                                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:329:43: error: no match for ‘operator=’ (operand types are ‘std::vector<std::vector<int> >’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  329 |             board = m[std::string("board")];
      |                                           ^
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘const std::vector<std::vector<int> >&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::vector<std::vector<int> >&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::initializer_list<std::vector<int> >’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:330:43: error: cannot convert ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘int’ in assignment
  330 |             score = m[std::string("score")];
      |                                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:331:43: error: cannot convert ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘bool’ in assignment
  331 |             moved = m[std::string("moved")];
      |                                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:335:43: error: no match for ‘operator=’ (operand types are ‘std::vector<std::vector<int> >’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  335 |             board = m[std::string("board")];
      |                                           ^
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘const std::vector<std::vector<int> >&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::vector<std::vector<int> >&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::initializer_list<std::vector<int> >’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:336:43: error: cannot convert ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘int’ in assignment
  336 |             score = m[std::string("score")];
      |                                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:337:43: error: cannot convert ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘bool’ in assignment
  337 |             moved = m[std::string("moved")];
      |                                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:341:43: error: no match for ‘operator=’ (operand types are ‘std::vector<std::vector<int> >’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  341 |             board = m[std::string("board")];
      |                                           ^
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘const std::vector<std::vector<int> >&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::vector<std::vector<int> >&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::initializer_list<std::vector<int> >’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:342:43: error: cannot convert ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘int’ in assignment
  342 |             score = m[std::string("score")];
      |                                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:343:43: error: cannot convert ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘bool’ in assignment
  343 |             moved = m[std::string("moved")];
      |                                           ^
/workspace/mochi/tests/rosetta/transpiler/CPP/2048.cpp:350:44: error: no match for ‘operator=’ (operand types are ‘std::vector<std::vector<int> >’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  350 |             board = r2[std::string("board")];
      |                                            ^
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘const std::vector<std::vector<int> >&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::vector<std::vector<int> >&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘std::initializer_list<std::vector<int> >’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
